--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,9 @@ a:hover,
 a:focus {
     text-decoration: none;
 }
-
+.owl-theme .owl-nav {
+    margin-top: 0;
+}
 .owl-nav > div,
 .owl-nav > button {
     display: inline-block;
@@ -332,14 +334,22 @@ h5,.h5{font-size:1em}
     padding-right: 0;
 }
 
-.row-sm {
+.row-xs {
     margin-left: -5px;
     margin-right: -5px;
 }
-
-.row-sm > div {
+.row-xs > div {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.row-sm {
+    margin-left: -7px;
+    margin-right: -7px;
+}
+.row-sm > div {
+    padding-left: 7px;
+    padding-right: 7px;
 }
 
 .row-md {
@@ -347,9 +357,26 @@ h5,.h5{font-size:1em}
     margin-right: -10px;
 }
 
-.row-sm > div {
+.row-md > div {
     padding-left: 10px;
     padding-right: 10px;
+}
+.row-list > .item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.row-md.row-list > .item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.row-sm.row-list > .item {
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+.row-xs.row-list > .item {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .clearfix:before,
